tests/golden/fixtures/syntax-symbolic-subscripts-err-array-index-nonconstant/expected.err
Error: symbolic subscript array index must be a constant numeric expression
   ╭─[ tests/golden/fixtures/syntax-symbolic-subscripts-err-array-index-nonconstant/input.k65:6:5 ]
   │
 6 │     lda foo.string[idx]
   │     ─────────┬─────────  
   │              ╰─────────── non-constant index
   │ 
   │ Help: use a literal or `const`-rooted expression inside `foo.string[...]`; runtime indices into symbolic-subscript arrays must go through a `var` or pointer arithmetic, not the bracket form
   │ 
   │ Note: The bracket form on a symbolic subscript field is folded into a fixed address at compile time; that requires the index to be known before code is generated.
───╯
